# slicerpackages

./: AppController.php  Notification.php
configs/: module.ini
controllers/: AdminController.php  AdvancedController.php  ConfigController.php  CreatestructureController.php  IndexController.php  IndexCoreController.php  ViewController.php
controllers/components/: ApiComponent.php  UtilityComponent.php
controllers/forms/: ConfigForm.php
database/: InstallScript.php
database/mysql/: 1.0.0.sql
database/pgsql/: 1.0.0.sql
database/upgrade/: 1.0.1.php  1.0.2.php  1.0.3.php  1.0.4.php  1.0.5.php  1.0.6.php
models/: AppDao.php  AppModel.php
models/base/: ExtensionModelBase.php  PackageModelBase.php
models/dao/: ExtensionDao.php  PackageDao.php
models/pdo/: ExtensionModel.php  PackageModel.php
public/css/: slicerpackages.advanced.css  slicerpackages.css  slicerpackages.index.css
public/js/: jquery.client.js  jquery.tablesorter.js
public/js/config/: config.index.js
public/js/index/: slicerpackages.advanced.js  slicerpackages.index.js
tests/: CMakeLists.txt
tests/controllers/: NotificationTest.php
tests/databaseDataset/: default.xml
tests/models/base/: CMakeLists.txt  PackageModelTest.php
views/config/: index.phtml
views/index/: admin.phtml  advanced.phtml  index.phtml  viewsidebar.phtml
views/view/: advanced.phtml  index.phtml
